Fix form button outline contrast

--- a/style.css
+++ b/style.css
@@ -348,6 +348,10 @@ textarea {
   width: 140px;
 }
 
+.form-button:focus {
+  outline: #ffffff;
+}
+
 .project-button:focus {
   outline: #0000ee;
 }
